--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
        <div class="Profile Body">
            <div id="name">
                <h1>Sanket Malekar</h1>
-               <h2>Frontend Engineer,UBER</h2>
+               <h2>Frontend Engineer,AMAZON</h2>
                </div>
                <hr />
 
